After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743440 - ShowLocalGreeter doesn't work (standalone XDMCP server)
ShowLocalGreeter doesn't work (standalone XDMCP server)
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-24 14:26 UTC by maxime.deroucy
Modified: 2015-02-03 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdm3 not patched, debug output (13.68 KB, application/octet-stream)
2015-01-24 14:26 UTC, maxime.deroucy
  Details
gdm3 patched, debug output (502 bytes, text/plain)
2015-01-24 14:27 UTC, maxime.deroucy
  Details
patch correcting this issue (1.23 KB, patch)
2015-01-24 14:27 UTC, maxime.deroucy
committed Details | Review

Description maxime.deroucy 2015-01-24 14:26:12 UTC
Created attachment 295326 [details]
gdm3 not patched, debug output

I want to run gdm as standalone XDMCP server.

I add :

   [xdmcp]
   Enable = true
   ShowLocalGreeter = false

In /etc/gdm3/daemon.conf but it doesn't work (see gdm3-not-patched), gdm try to start a local X server (it doesn't work as I am in a container).

I made a patch (0001-correct-ShowLocalGreeter-standalone-XDMCP-server.patch) to :
    Get the ShowLocalGreeter option from configuration file BEFORE launching
    the gdm manager. In order to let the manager know if it have to launch a
    local X server or not.

It works as you can see in gdm3-patched.
Comment 1 maxime.deroucy 2015-01-24 14:27:15 UTC
Created attachment 295327 [details]
gdm3 patched, debug output
Comment 2 maxime.deroucy 2015-01-24 14:27:54 UTC
Created attachment 295328 [details] [review]
patch correcting this issue
Comment 3 Ray Strode [halfline] 2015-02-03 21:47:08 UTC
Looks right to me, thanks.