correct ShowLocalGreeter (standalone XDMCP server)

Get the ShowLocalGreeter option from configuration file BEFORE launching
the gdm manager. In order to let the manager know if it have to launch a
local X server or not.

https://bugzilla.gnome.org/show_bug.cgi?id=743440